builds against reform 2.2. use reform/rails.

--- a/gemfiles/Gemfile.reform-2.2
+++ b/gemfiles/Gemfile.reform-2.2
@@ -2,6 +2,7 @@ source "http://rubygems.org"
 
 gemspec path: '../'
 
-gem "reform", "~> 2.1.0"
+gem "reform", "~> 2.2.0"
+gem "reform-rails"
 gem "roar", github: "apotonick/roar" # "1.1.0"
 gem "multi_json"
